--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <title>Page Title</title>
   <meta charset="UTF-8"/>
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
 </head>
 <body>
   <button class="new-book">New Book</button>
